# syspilot

./: CMakeLists.txt  README.md
cmake/: include.cmake  sources.cmake  test.cmake
docs/: README.md
src/: syspilot.cpp
src/args/: args.h  clioptions.cpp  clioptions.h  elevatorargs.h  pdfengineargs.h  uniterargs.h
src/environment/: environment.cpp  environment.h  environmentmanager.cpp  environmentmanager.h  environmenttypes.h
src/files/: fileintegrity.cpp  fileintegrity.h  files.h
src/logging/: logger.cpp  logger.h
src/paths/: pathresolver.cpp  pathresolver.h  paths.cpp  paths.h  pathtypes.h
src/process/: childprocess.cpp  childprocess.h  process.cpp  process.h  processhandle.cpp  processhandle.h  processtypes.h
src/recover/: recover.h  recoveryclass.cpp  recoveryclass.h
src/restart/: restart.cpp  restart.h
src/secure/: credentialstorage.cpp  credentialstorage.h  secure.h
src/storage/: settingsstorage.cpp  settingsstorage.h  storage.cpp  storage.h
tests/: main.cpp
tests/args/: clioptions_tests.cpp  umbrella_headers_tests.cpp
tests/environment/: environment_tests.cpp
tests/files/: fileintegrity_tests.cpp
tests/logging/: logger_tests.cpp
tests/paths/: paths_tests.cpp
tests/process/: process_tests.cpp
tests/recover/: recoveryclass_tests.cpp
tests/secure/: credentialstorage_tests.cpp
tests/storage/: storage_tests.cpp
verbose/: args.h  clioptions.h  elevatorargs.h  environment.h  environmentmanager.h  environmenttypes.h  logger.h  pathresolver.h  paths.h  pathtypes.h  pdfengineargs.h  processtypes.h  settingsstorage.h  storage.h  uniterargs.h
